Update examples to us Tascalate Javaflow 2.8.1; add ObjectWebBeans 4.0 example