@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-      classpath 'net.tascalate.javaflow:net.tascalate.javaflow.tools.gradle:2.7.8'
+      classpath 'net.tascalate.javaflow:net.tascalate.javaflow.tools.gradle:2.8.1'
     }
 }
 
@@ -17,19 +17,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'net.tascalate.javaflow:net.tascalate.javaflow.api:2.7.8'
+    implementation 'net.tascalate.javaflow:net.tascalate.javaflow.api:2.8.1'
     testImplementation 'junit:junit:4.13.2'
 }
 
 group = 'net.tascalate.javaflow.examples'
-version = '1.1.9'
+version = '1.2.0'
 description = 'Tascalate JavaFlow Examples / SkyNet'
-java.sourceCompatibility = JavaVersion.VERSION_1_6
+java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 application {
-    mainClass = 'org.apache.commons.javaflow.examples.skynet.Skynet'
+    mainClass = 'org.apache.commons.javaflow.examples.skynet.SkynetSuspend'
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+
